<resources>
    <string name="app_name">Sapiii</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gambar_sapi">Gambar Sapi</string>
    <string name="sapi">SAPI</string>
    <string name="kambing">KAMBING</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save_account">Simpan Akun</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="registration">Registrasi</string>
    <string name="register">Register</string>
    <string name="password_reconfirmation">Konfirmasi Password</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="nama">Nama</string>
    <string name="submit">Submit</string>
    <string name="input_data_hewan">Input Data Hewan</string>
    <string name="edit_data_hewan">Edit Data Hewan</string>

    <string name="status">Status</string>
    <string name="asal">Asal</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="usia_sapi">Usia Sapi</string>
    <string name="data_sapi_sekarang">Data Sapi Sekarang</string>
    <string name="data_kambing_sekarang">Data Kambing Sekarang</string>
    <string name="berat_badan_awal">Berat Badan Awal</string>
    <string name="usia_awal">Usia Awal</string>
    <string name="data_kedatangan_awal">Data Kedatangan Awal</string>
    <string name="bulan_kedatangan">Bulan Kedatangan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jenis">Jenis</string>
    <string name="something_wrong">Terjadi kesalahan</string>
    <string name="nama_sapi">Nama Sapi</string>
    <string name="nama_kambing">Nama Kambing</string>
    <string name="kesehatan">KESEHATAN</string>
    <string name="usia_kambing">Usia Kambing</string>
    <string name="id_pmk">ID PMK</string>

    <string-array name="option_kesehatan">
        <item>Sehat</item>
        <item>Sakit</item>
    </string-array>
    <string name="title_activity_tambah_data_mutasi">TambahDataMutasiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="katalog_sapi">Katalog Sapi</string>
    <string name="katalog_kambing">Katalog Kambing</string>


    <string name="inves_sapi">Invesment Sapi</string>
    <string name="inves_kambing">Invesment Kambing</string>

</resources>