<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.kesehatan.sapi.view.KesehatanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_blue_background"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sapi"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/gambar_sapi"
                    android:src="@drawable/ic_username" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="20dp"
                android:text="MONITORING KESEHATAN"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_search_black" />

                <TextView
                    android:id="@+id/tag_sapi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:text="Sapi 1017" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="Kondisi Saat ini"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:entries="@array/option_kesehatan" />


                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Vaksin"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Vaksin 1"

                                    android:textColor="@color/black" />

                                <CheckBox
                                    android:id="@+id/checkbox_vaccine_1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Vaksin 2"

                                    android:textColor="@color/black" />

                                <CheckBox
                                    android:id="@+id/checkbox_vaccine_2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Vaksin 3"
                                    android:textColor="@color/black" />

                                <CheckBox
                                    android:id="@+id/checkbox_vaccine_3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                            <!--                            <CheckBox-->
                            <!--                                android:id="@+id/checkbox_vaccine_1"-->
                            <!--                                android:layout_width="match_parent"-->
                            <!--                                android:layout_height="wrap_content"-->
                            <!--                                android:text="Vaksin 1"/>-->

                            <!--                            <CheckBox-->
                            <!--                                android:id="@+id/checkbox_vaccine_2"-->
                            <!--                                android:layout_width="match_parent"-->
                            <!--                                android:layout_height="wrap_content"-->
                            <!--                                android:text="Vaksin 2"/>-->

                            <!--                            <CheckBox-->
                            <!--                                android:id="@+id/checkbox_vaccine_3"-->
                            <!--                                android:layout_width="match_parent"-->
                            <!--                                android:layout_height="wrap_content"-->
                            <!--                                android:text="Vaksin 3"/>-->


                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Keterangan">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_keterangn_kesehatan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/submit" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>